@@ -1,3 +1,15 @@
+2012-11-10  Joseph Pecoraro  <pecoraro@apple.com>
+
+        [Mac] Guard WebCore PageVisibility Symbol Export
+        https://bugs.webkit.org/show_bug.cgi?id=101817
+
+        Reviewed by Andreas Kling.
+
+        Guard the export with the same ENABLE guards around its definition
+        and implementation.
+
+        * WebCore.exp.in:
+
 2012-11-10  Bruno de Oliveira Abinader  <bruno.abinader@basyskom.com>
 
         [css] text-decoration:none no longer valid
